Delphi/Lib/XCGUI.pas

function XAdapterListView_Group_AddItemText (hAdapter:Integer;pValue:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterListView_Group_AddItemTextEx (hAdapter:Integer;pName:PWideChar;pValue:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterListView_Group_AddItemImage (hAdapter:Integer;hImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterListView_Group_AddItemImageEx (hAdapter:Integer;pName:PWideChar;hImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterListView_Group_SetText (hAdapter:Integer;iGroup:Integer;iColumn:Integer;pValue:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterListView_Group_SetTextEx (hAdapter:Integer;iGroup:Integer;pName:PWideChar;pValue:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterListView_Group_SetImage (hAdapter:Integer;iGroup:Integer;iColumn:Integer;hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterListView_Group_SetImageEx (hAdapter:Integer;iGroup:Integer;pName:PWideChar;hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterListView_Group_GetCount (hAdapter:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterListView_Item_GetCount (hAdapter:Integer;iGroup:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterListView_Item_AddColumn (hAdapter:Integer;pName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterListView_Item_AddItemText (hAdapter:Integer;iGroup:Integer;pValue:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterListView_Item_AddItemTextEx (hAdapter:Integer;iGroup:Integer;pName:PWideChar;pValue:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterListView_Item_AddItemImage (hAdapter:Integer;iGroup:Integer;hImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterListView_Item_AddItemImageEx (hAdapter:Integer;iGroup:Integer;pName:PWideChar;hImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterListView_Item_SetText (hAdapter:Integer;iGroup:Integer;iItem:Integer;iColumn:Integer;pValue:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterListView_Item_SetTextEx (hAdapter:Integer;iGroup:Integer;iItem:Integer;pName:PWideChar;pValue:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterListView_Item_SetImage (hAdapter:Integer;iGroup:Integer;iItem:Integer;iColumn:Integer;hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterListView_Item_SetImageEx (hAdapter:Integer;iGroup:Integer;iItem:Integer;pName:PWideChar;hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterListView_Group_DeleteItem (hAdapter:Integer;iGroup:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XAdapterListView_Group_DeleteAllChildItem (hAdapter:Integer;iGroup:Integer);stdcall;far; external 'xcgui.dll';
function XAdapterListView_Item_DeleteItem (hAdapter:Integer;iGroup:Integer;iItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XAdapterListView_DeleteAll (hAdapter:Integer);stdcall;far; external 'xcgui.dll';
procedure XAdapterListView_DeleteAllGroup (hAdapter:Integer);stdcall;far; external 'xcgui.dll';
procedure XAdapterListView_DeleteAllItem (hAdapter:Integer);stdcall;far; external 'xcgui.dll';
procedure XAdapterListView_DeleteColumnGroup (hAdapter:Integer;iColumn:Integer);stdcall;far; external 'xcgui.dll';
procedure XAdapterListView_DeleteColumnItem (hAdapter:Integer;iColumn:Integer);stdcall;far; external 'xcgui.dll';
function XAdapterListView_Item_GetTextEx (hAdapter:Integer;iGroup:Integer;iItem:Integer;pName:PWideChar;pOut:PWideChar;nOutLen:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterListView_Item_GetImageEx (hAdapter:Integer;iGroup:Integer;iItem:Integer;pName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterTable_Create () : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterTable_AddColumn (hAdapter:Integer;pName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterTable_SetColumn (hAdapter:Integer;pColName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterTable_AddItemText (hAdapter:Integer;pValue:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterTable_AddItemTextEx (hAdapter:Integer;pName:PWideChar;pValue:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterTable_AddItemImage (hAdapter:Integer;hImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterTable_AddItemImageEx (hAdapter:Integer;pName:PWideChar;hImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterTable_InsertItemText (hAdapter:Integer;iItem:Integer;pValue:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterTable_InsertItemTextEx (hAdapter:Integer;iItem:Integer;pName:PWideChar;pValue:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterTable_InsertItemImage (hAdapter:Integer;iItem:Integer;hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterTable_InsertItemImageEx (hAdapter:Integer;iItem:Integer;pName:PWideChar;hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterTable_SetItemText (hAdapter:Integer;iItem:Integer;iColumn:Integer;pValue:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterTable_SetItemTextEx (hAdapter:Integer;iItem:Integer;pName:PWideChar;pValue:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterTable_SetItemImage (hAdapter:Integer;iItem:Integer;iColumn:Integer;hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterTable_SetItemImageEx (hAdapter:Integer;iItem:Integer;pName:PWideChar;hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterTable_DeleteItem (hAdapter:Integer;iItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterTable_DeleteItemEx (hAdapter:Integer;iItem:Integer;nCount:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XAdapterTable_DeleteItemAll (hAdapter:Integer);stdcall;far; external 'xcgui.dll';
procedure XAdapterTable_DeleteColumnAll (hAdapter:Integer);stdcall;far; external 'xcgui.dll';
function XAdapterTable_GetCount (hAdapter:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterTable_GetCountColumn (hAdapter:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterTable_GetItemText (hAdapter:Integer;iItem:Integer;iColumn:Integer;pOut:PWideChar;nOutLen:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterTable_GetItemImage (hAdapter:Integer;iItem:Integer;iColumn:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterTable_GetItemTextEx (hAdapter:Integer;iItem:Integer;pName:PWideChar;pOut:PWideChar;nOutLen:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterTable_GetItemImageEx (hAdapter:Integer;iItem:Integer;pName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterTree_Create () : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterTree_AddColumn (hAdapter:Integer;pName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterTree_SetColumn (hAdapter:Integer;pColName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterTree_InsertItemText (hAdapter:Integer;pValue:PWideChar;nParentID:Integer;insertID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterTree_InsertItemTextEx (hAdapter:Integer;pName:PWideChar;pValue:PWideChar;nParentID:Integer;insertID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterTree_InsertItemImage (hAdapter:Integer;hImage:Integer;nParentID:Integer;insertID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterTree_InsertItemImageEx (hAdapter:Integer;pName:PWideChar;hImage:Integer;nParentID:Integer;insertID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterTree_GetCount (hAdapter:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterTree_GetCountColumn (hAdapter:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterTree_SetItemText (hAdapter:Integer;nID:Integer;iColumn:Integer;pValue:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterTree_SetItemTextEx (hAdapter:Integer;nID:Integer;pName:PWideChar;pValue:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterTree_SetItemImage (hAdapter:Integer;nID:Integer;iColumn:Integer;hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterTree_SetItemImageEx (hAdapter:Integer;nID:Integer;pName:PWideChar;hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterTree_GetItemTextEx (hAdapter:Integer;nID:Integer;pName:PWideChar;pOut:PWideChar;nOutLen:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterTree_GetItemImageEx (hAdapter:Integer;nID:Integer;pName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterTree_DeleteItem (hAdapter:Integer;nID:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XAdapterTree_DeleteItemAll (hAdapter:Integer);stdcall;far; external 'xcgui.dll';
procedure XAdapterTree_DeleteColumnAll (hAdapter:Integer);stdcall;far; external 'xcgui.dll';
function XAdapterMap_Create () : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterMap_AddItemText (hAdapter:Integer;pName:PWideChar;pValue:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterMap_AddItemImage (hAdapter:Integer;pName:PWideChar;hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterMap_DeleteItem (hAdapter:Integer;pName:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterMap_GetCount (hAdapter:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdapterMap_GetItemText (hAdapter:Integer;pName:PWideChar;pOut:PWideChar;nOutLen:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdapterMap_GetItemImage (hAdapter:Integer;pName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
//procedure _XC_DebugPrintf (level:Integer;pFormat:PChar;点点点:Integer);stdcall;far; external 'xcgui.dll';
//procedure _XC_DebugPrintfW (level:Integer;pFormat:PWideChar;点点点:Integer);stdcall;far; external 'xcgui.dll';
//procedure xtrace (pFormat:PChar;点点点:Integer);stdcall;far; external 'xcgui.dll';
//procedure xtracew (pFormat:PWideChar;点点点:Integer);stdcall;far; external 'xcgui.dll';
function XDraw_Create (hdc:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XDraw_Destroy (hDraw:Integer);stdcall;far; external 'xcgui.dll';
procedure XDraw_SetOffset (hDraw:Integer;x:Integer;y:Integer);stdcall;far; external 'xcgui.dll';
procedure XDraw_GetOffset (hDraw:Integer;pX:Integer;pY:Integer);stdcall;far; external 'xcgui.dll';
procedure XDraw_RestoreGDIOBJ (hDraw:Integer);stdcall;far; external 'xcgui.dll';
function XDraw_GetHDC (hDraw:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XDraw_SetBrushColor (hDraw:Integer;color:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
procedure XDraw_SetTextAlign (hDraw:Integer;nFlag:Integer);stdcall;far; external 'xcgui.dll';
procedure XDraw_SetTextVertical (hDraw:Integer;bVertical:LongBool);stdcall;far; external 'xcgui.dll';
procedure XDraw_SetFontX (hDraw:Integer;hFontx:Integer);stdcall;far; external 'xcgui.dll';
procedure XDraw_SetFont (hDraw:Integer;size:Integer);stdcall;far; external 'xcgui.dll';
procedure XDraw_SetFont2 (hDraw:Integer;pName:PWideChar;size:Integer);stdcall;far; external 'xcgui.dll';
procedure XDraw_SetFont3 (hDraw:Integer;pLogFont:TLOGFONT);stdcall;far; external 'xcgui.dll';
procedure XDraw_SetLineWidth (hDraw:Integer;nWidth:Integer);stdcall;far; external 'xcgui.dll';
